// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Displays error warning about required props 1`] = `undefined`;

exports[`Renders backorder notification when inventory is sold out and backorder is allowed 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
}

<div
  className="c0"
>
  Backordered - ships when available
</div>
`;

exports[`Renders low inventory notification when inventory is lower than threshold 1`] = `"StockWarning({\\"inventoryQuantity\\":6,\\"isLowInventoryQuantity\\":true})"`;

exports[`Renders nothing when inventory is ready to be sold 1`] = `null`;

exports[`Renders sold out notification when inventory is sold out and backorder is not allowed 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #cd3f4c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
}

<div
  className="c0"
>
  Out of stock
</div>
`;
